--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "1.6.0",
   "private": false,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"cd backend && yarn dev\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -44,11 +44,15 @@
     "@iconify/react": "^4.0.0",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
+    "@mui/x-date-pickers": "^5.0.5",
     "apexcharts": "^3.36.0",
     "change-case": "^4.1.2",
+    "concurrently": "^7.5.0",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
